2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c, src/chage.c, src/newusers.c, src/su.c: The getopt
	index of long options is not used.

2011-10-29  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/Makefile.am, libmisc/root_flag.c,
	po/POTFILES.in: Add process_root_flag() to process the --root
	option and chroot so that the chroot config is used and changes
	are applied to the chroot.
	* NEWS, src/useradd.c, man/useradd.8.xml: Add --root option. Open
	audit after the potential chroot.
	* NEWS, src/userdel.c, man/userdel.8.xml: Add --root option. Open
	audit and syslog after the potential chroot. userdel's usage split
	in smaller messages.
	* NEWS, src/usermod.c, man/usermod.8.xml: Likewise
	* NEWS, src/groupadd.c, man/groupadd.8.xml: Add --root option. Open
	audit and syslog after the potential chroot.
	* src/groupadd.c: Check atexit failures.
	* src/groupadd.c: Return E_SUCCESS instead of exit'ing at the end
	of main().
	* NEWS, src/groupadd.c, man/groupadd.8.xml: Add --root option. Open
	audit and syslog after the potential chroot.
	* src/groupmod.c: The getopt index of long options is not used.
	* src/groupdel.c: Add process_flags().
	* src/groupdel.c, man/groupdel.8.xml: Add --help option.
	* NEWS, src/groupdel.c, man/groupdel.8.xml: Add --root option. Open
	audit and syslog after the potential chroot.
	* src/groupdel.c: Check atexit failures.
	* NEWS, src/pwconv.c, src/pwunconv.c, src/grpconv.c,
	src/grpunconv.c, man/pwconv.8.xml: Add --root option.
	* src/pwconv.c, src/pwunconv.c, src/grpconv.c, src/grpunconv.c:
	Add --help option.
	* src/pwconv.c, src/pwunconv.c, src/grpconv.c, src/grpunconv.c:
	Add process_flags() and usage().
	* NEWS, src/chpasswd.c, man/chpasswd.8.xml, src/chgpasswd.c,
	man/chgpasswd.8.xml: Add --root option.
	* src/chpasswd.c, src/chgpasswd.c: The getopt index of long
	options is not used.
	* NEWS, src/passwd.c, man/passwd.1.xml: Add --root option.