@@ -1,5 +1,10 @@
 2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/login.c: re-indent.
+	* src/login.c: Fix support for sub-logins.
+
+2011-10-30  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/faillog.c, src/chage.c, src/newusers.c, src/su.c: The getopt
 	index of long options is not used.
 
